feat: Enhance course and module management with detailed DTOs and service methods