@@ -2,6 +2,7 @@ package com.study4ever.courseservice.service.impl;
 
 import com.study4ever.courseservice.dto.CourseRequestDto;
 import com.study4ever.courseservice.dto.CourseResponseDto;
+import com.study4ever.courseservice.dto.CourseDetailResponseDto;
 import com.study4ever.courseservice.model.Course;
 import com.study4ever.courseservice.repository.CourseRepository;
 import com.study4ever.courseservice.service.CourseService;
@@ -23,7 +24,7 @@ public class CourseServiceImpl implements CourseService {
     public List<CourseResponseDto> getAllCourses() {
         return courseRepository.findAll().stream()
                 .map(courseMapper::mapToResponseDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -32,6 +33,20 @@ public class CourseServiceImpl implements CourseService {
                 .orElseThrow(() -> new RuntimeException("Course not found"));
         return courseMapper.mapToResponseDto(course);
     }
+    
+    @Override
+    public CourseDetailResponseDto getCourseDetailsById(Long id) {
+        Course course = courseRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Course not found"));
+        return courseMapper.mapToDetailResponseDto(course);
+    }
+    
+    @Override
+    public List<CourseDetailResponseDto> getAllCoursesWithDetails() {
+        return courseRepository.findAll().stream()
+                .map(courseMapper::mapToDetailResponseDto)
+                .collect(Collectors.toList());
+    }
 
     @Override
     public Course createCourse(CourseRequestDto courseRequestDto) {
@@ -39,13 +54,22 @@ public class CourseServiceImpl implements CourseService {
         courseMapper.mapToCourse(course, courseRequestDto);
         return courseRepository.save(course);
     }
+    
+    @Override
+    public CourseResponseDto saveCourse(CourseRequestDto courseRequestDto) {
+        Course course = new Course();
+        courseMapper.mapToCourse(course, courseRequestDto);
+        Course savedCourse = courseRepository.save(course);
+        return courseMapper.mapToResponseDto(savedCourse);
+    }
 
     @Override
-    public Course updateCourse(Long id, CourseRequestDto courseRequestDto) {
+    public CourseResponseDto updateCourse(Long id, CourseRequestDto courseRequestDto) {
         Course existingCourse = courseRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Course not found"));
         courseMapper.mapToCourse(existingCourse, courseRequestDto);
-        return courseRepository.save(existingCourse);
+        Course updatedCourse = courseRepository.save(existingCourse);
+        return courseMapper.mapToResponseDto(updatedCourse);
     }
 
     @Override
